syntax = "proto3";
package wirepb;

message RequestHeader {
	string method         	= 1;
	uint64 seq            	= 2;
	bool   isResponse     	= 3;
}

message ResponseHeader {
	string method        	= 1;
	uint64 seq            	= 2;
	bool   isResponse		= 3;
	string error          	= 4;
}
